# pyVoltLab

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build_sim.py  pyproject.toml  requirements.txt  setup.cfg
devtools/: CONTRIBUTING.md  README.md
devtools/conda-envs/: test_env.yaml
devtools/scripts/: create_conda_env.py
docs/: Makefile  README.md  api.rst  conf.py  developer_guide.rst  getting_started.rst  index.rst  make.bat  requirements.yaml  user_guide.rst
examples/LiCoO2/: LiCoO2_mp-22526_conventional_standard.cif  full_simulation_settings.yaml  settings.yaml
examples/LiCoO2/VP/: hull.csv  thermo.csv  trj.xyz  voltage.csv
examples/LiCoO2/VP/states/: 000-Co3Li3O6.csv  000-Co3Li3O6.xyz  001-Co3Li2O6.csv  001-Co3Li2O6.xyz  002-Co3LiO6.csv  002-Co3LiO6.xyz  003-Co3O6.csv  003-Co3O6.xyz
examples/brute-force-LiFePO4/: 2x1x1-LiFePO4.cif  Li.cif  full_simulation_settings.yaml  settings.yaml
examples/brute-force-LiFePO4/VP/: hull.csv  thermo.csv  trj.xyz  voltage.csv
examples/brute-force-LiFePO4/VP/states/: 000-Fe8Li8O32P8.csv  000-Fe8Li8O32P8.xyz  001-Fe8Li7O32P8.xyz  002-Fe8Li6O32P8.csv  002-Fe8Li6O32P8.xyz  003-Fe8Li5O32P8.csv  003-Fe8Li5O32P8.xyz  004-Fe8Li4O32P8.csv  004-Fe8Li4O32P8.xyz  005-Fe8Li3O32P8.csv  005-Fe8Li3O32P8.xyz  006-Fe8Li2O32P8.csv  006-Fe8Li2O32P8.xyz  007-Fe8LiO32P8.csv  007-Fe8LiO32P8.xyz  008-Fe8O32P8.csv  008-Fe8O32P8.xyz
examples/input_files/mc/: equlibration.yaml  production.yaml
examples/input_files/pid_mc/: pid_setting.yaml
examples/input_files/volt/: settings.yaml
examples/r2scan-existing-cathodes-V-profile/: Li.cif  Na.cif
examples/r2scan-existing-cathodes-V-profile/KVPO4F/: K.cif  KVPO4F.cif  full_simulation_settings.yaml  settings.yaml
examples/r2scan-existing-cathodes-V-profile/KVPO4F/VP/: hull.csv  thermo.csv  trj.xyz  voltage.csv
examples/r2scan-existing-cathodes-V-profile/KVPO4F/VP/states/: 000-F8K8O32P8V8.csv  000-F8K8O32P8V8.xyz  001-F8K7O32P8V8.csv  001-F8K7O32P8V8.xyz  002-F8K6O32P8V8.csv  002-F8K6O32P8V8.xyz  003-F8K5O32P8V8.csv  003-F8K5O32P8V8.xyz  004-F8K4O32P8V8.csv  004-F8K4O32P8V8.xyz  005-F8K3O32P8V8.csv  005-F8K3O32P8V8.xyz  006-F8K2O32P8V8.csv  006-F8K2O32P8V8.xyz  007-F8KO32P8V8.csv  007-F8KO32P8V8.xyz  008-F8O32P8V8.csv  008-F8O32P8V8.xyz
examples/r2scan-existing-cathodes-V-profile/Li2MnO3/: Li2MnO3_mp-18988_conventional_standard.cif  full_simulation_settings.yaml  settings.yaml
examples/r2scan-existing-cathodes-V-profile/Li2MnO3/VP/: hull.csv  thermo.csv  trj.xyz  voltage.csv
examples/r2scan-existing-cathodes-V-profile/Li2MnO3/VP/states/: 000-Li8Mn4O12.csv  000-Li8Mn4O12.xyz  001-Li7Mn4O12.csv  001-Li7Mn4O12.xyz  002-Li6Mn4O12.csv  002-Li6Mn4O12.xyz  003-Li5Mn4O12.csv  003-Li5Mn4O12.xyz  004-Li4Mn4O12.csv  004-Li4Mn4O12.xyz  005-Li3Mn4O12.csv  005-Li3Mn4O12.xyz  006-Li2Mn4O12.csv  006-Li2Mn4O12.xyz  007-LiMn4O12.csv  007-LiMn4O12.xyz  (+2 more)
examples/r2scan-existing-cathodes-V-profile/LiCoO2/: 2x1x1_LiCoO2.cif  full_simulation_settings.yaml  settings.yaml
examples/r2scan-existing-cathodes-V-profile/LiCoO2/VP/: hull.csv  thermo.csv  trj.xyz  voltage.csv
examples/r2scan-existing-cathodes-V-profile/LiFePO4/: 2x1x1-LiFePO4.cif  full_simulation_settings.yaml  settings.yaml
examples/r2scan-existing-cathodes-V-profile/LiFePO4/VP/: hull.csv  thermo.csv  trj.xyz  voltage.csv
examples/r2scan-existing-cathodes-V-profile/MgV2O4/: MgV2O4_supercell.cif  Mg_mp-153_conventional_standard.cif  full_simulation_settings.yaml  settings.yaml
examples/r2scan-existing-cathodes-V-profile/MgV2O4/VP/: hull.csv  thermo.csv  trj.xyz  voltage.csv
examples/r2scan-existing-cathodes-V-profile/NaCoO2/: 2x1x1-NaCoO2.cif  NaCoO2_mp-867515_primitive.cif  full_simulation_settings.yaml  settings.yaml
examples/r2scan-existing-cathodes-V-profile/NaCoO2/VP/: hull.csv  thermo.csv  trj.xyz  voltage.csv
mc_mace/: __init__.py  _info.py  _version.py  pymc.py
mc_mace/ensembles/: __init__.py  abc_ensemble.py  exceptions.py  mupt.py  npt.py
mc_mace/mc/: __init__.py  monte_carlo.py
mc_mace/simulations/: __init__.py  chem_pot_pid.py  simple_mc.py  simulation_abc.py  voltage_profile.py
mc_mace/tests/: test_mc_mace.py
mc_mace/utils/: header.py  io.py  logger.py  moving_avg.py  neighborlist.py  parse.py  parse_input.py  parse_pid_input.py  parse_volatege_input.py  profiler.py
(+67 files in other folders)
